--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -31,6 +31,7 @@
         
         &--gradient {
             @include gradient-text;
+            outline: 2px solid $color-white;
         }
         
         @include for-tablet-landscape-up {
